--- a/info/reproduce.org
+++ b/info/reproduce.org
@@ -133,11 +133,144 @@ Finally the =runs= directory will contain runs of different tools, such as {{{to
    #+begin_src bash
      $bin/build_mgm_models_from_gms2_models_py.sh --
    #+end_src
-** Run Tools on verified set
+** Extract NCBI Protein Homology Predictions
    #+begin_src bash
-     for tool in gms2 prodigal mprodigal mgm2 mgm; do
-       $bin/run_tool_on_genome_list_py.sh --pf-gil $lists/verified.list --type auto --tool $tool --pf-mgm-mod $base/bin_external/gms2/mgm_11.mod --pf-mgm2-mod $base/bin_external/mgm2/mgm2_11.mod
+     pf_gil=$lists/sbsp.list
+
+     awk -F "," '{if (NR > 1 && NF) print $1}' $pf_gil  | while read -r gcfid; do
+       mkdir -p $runs/$gcfid/ncbi_ph;
+       awk -F "\t" '{if ($2 == "Protein Homology") print }' $data/$gcfid/ncbi.gff > $runs/$gcfid/ncbi_ph/prediction.gff;
      done
    #+end_src
+** Complete Genomes
+*** Verified Starts
+    #+begin_src bash
+      # run tools on verified starts
+
+      dn_experiment=complete_verified
+      cd $tmp
+      mkdir -p $dn_experiment
+      cd $dn_experiment
+
+      pf_gil=$lists/verified.list
+      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
+      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
+      pf_prl_options=$config/parallelization_pbs_2.conf
+
+      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
+
+      for t in "${tools[@]}"; do
+        $bin/run_tool_on_genome_list_py.sh --pf-gil $pf_gil --type auto --tool $t --pf-mgm-mod $pf_mgm_mod --pf-mgm2-mod $pf_mgm2_mod --pf-parallelization-options $pf_prl_options
+      done
 
 
+      # collect statistics
+      pf_stats=$(pwd)/summary_complete_verified.csv
+      $bin/stats_per_gene_py.sh --pf-gil $pf_gil --tools ncbi_ph ncbi verified "${tools[@]}" --pf-parallelization-options $pf_prl_options --pf-output $pf_stats 
+
+      # visualize statistics
+      mkdir -p figures
+      cd figures
+
+      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference verified --tools "${tools[@]}" 
+
+      cd $base
+    #+end_src
+*** StartLink+ Starts
+    #+begin_src bash
+      # run tools on verified starts
+
+      dn_experiment=complete_startlink
+      cd $tmp
+      mkdir -p $dn_experiment
+      cd $dn_experiment
+
+      pf_gil=$lists/sbsp.list
+      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
+      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
+      pf_prl_options=$config/parallelization_pbs_2.conf
+
+      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
+
+      for t in "${tools[@]}"; do
+        $bin/run_tool_on_genome_list_py.sh --pf-gil $pf_gil --type auto --tool $t --pf-mgm-mod $pf_mgm_mod --pf-mgm2-mod $pf_mgm2_mod --pf-parallelization-options $pf_prl_options
+      done
+
+
+      # collect statistics
+      pf_stats=$(pwd)/summary_complete_startlink.csv
+      $bin/stats_per_gene_py.sh --pf-gil $pf_gil --tools sbsp ncbi ncbi_ph "${tools[@]}" --pf-parallelization-options $pf_prl_options --pf-output $pf_stats 
+
+      # visualize statistics
+      mkdir -p figures
+      cd figures
+
+      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference sbsp ncbi_ph --tools "${tools[@]}" 
+
+      cd $base
+    #+end_src
+** Genome Fragments
+*** Verified Starts
+    #+begin_src bash
+      dn_experiment=chunks_verified
+      cd $tmp
+      mkdir -p $dn_experiment
+      cd $dn_experiment
+
+      pf_gil=$lists/verified.list
+      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
+      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
+      pf_prl_options=$config/parallelization_pbs_2.conf
+
+      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
+
+      pf_runs_summary=$(pwd)/runs_summary_chunks_verified.csv
+      for t in "${tools[@]}"; do
+        $bin/run_tools_on_chunks_py.sh --pf-gil $pf_gil --tools "${tools[@]}" --pf-mgm2-mod $pf_mgm2_mod --pf-mgm-mod $pf_mgm_mod --pd-work $runs --pf-summary $pf_runs_summary --pf-parallelization-options $pf_prl_options
+      done
+
+
+      # collect statistics
+      pf_stats=$(pwd)/summary_chunks_verified.csv
+      $bin/stats_per_gene_on_chunk_py.sh --pf-summary $pf_runs_summary  --reference-tools verified ncbi ncbi_ph  --parallelization-options $pf_prl_options --pf-output $pf_stats 
+
+      # visualize statistics
+      mkdir -p figures
+      cd figures
+
+      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference verified --tools "${tools[@]}" 
+
+      cd $base
+    #+end_src
+*** StartLink Starts
+    #+begin_src bash
+      dn_experiment=chunks_startlink
+      cd $tmp
+      mkdir -p $dn_experiment
+      cd $dn_experiment
+
+      pf_gil=$lists/sbsp.list
+      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
+      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
+      pf_prl_options=$config/parallelization_pbs_2.conf
+
+      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
+
+      pf_runs_summary=$(pwd)/runs_summary_chunks_startlink.csv
+      for t in "${tools[@]}"; do
+        $bin/run_tools_on_chunks_py.sh --pf-gil $pf_gil --tools "${tools[@]}" --pf-mgm2-mod $pf_mgm2_mod --pf-mgm-mod $pf_mgm_mod --pd-work $runs --pf-summary $pf_runs_summary --pf-parallelization-options $pf_prl_options
+      done
+
+
+      # collect statistics
+      pf_stats=$(pwd)/summary_chunks_startlink.csv
+      $bin/stats_per_gene_on_chunk_py.sh --pf-summary $pf_runs_summary  --reference-tools ncbi sbsp sbsp_plus ncbi_ph  --parallelization-options $pf_prl_options --pf-output $pf_stats 
+
+      # visualize statistics
+      mkdir -p figures
+      cd figures
+
+      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference sbsp ncbi_ph --tools "${tools[@]}" 
+
+      cd $base
+    #+end_src
