--- a/info/reproduce.org
+++ b/info/reproduce.org
@@ -28,17 +28,15 @@ The first command loads all environment variables (including paths to data direc
 ** External Tools
    {{{tool}}} and {{{tool}}}+ and their analysis rely on a handful of external tools. The following need to be installed:
    - GeneMarkS-2
-     - Used for building {{{tool}}}+ predictions, and for analysis
+     - Used for building {{{tool}}} models, and for analysis
      - Link: http://exon.gatech.edu/GeneMark/license_download.cgi
-   - ClustalO:
-     - Used for constructing multiple sequence alignments
-     - Link: http://www.clustal.org/omega/#Download
    - Prodigal:
-     - Used for initial analysis of gene-start prediction status
+     - Key competitor for metagenome predictions
      - Link: https://github.com/hyattpd/Prodigal
-
+   - Other tools:
+     - FragGeneScan, MetaGeneAnnotator, MetaGeneMark
 ** Data
-   TODO
+   
 
    
 * Code and data structure
@@ -131,146 +129,178 @@ Finally the =runs= directory will contain runs of different tools, such as {{{to
 * Experiments
 ** Building MGM2 start models
    #+begin_src bash
-     $bin/build_mgm_models_from_gms2_models_py.sh --
+     mkdir $tmp/build_models
+     cd $tmp/build_models
+
+     # collect model information
+     pf_mods_bac=bac.pkl
+     pf_mods_arc=arc.pkl
+
+     # build models
+     pf_mgm2_11=mgm2_11.mod
+     pf_mgm2_4=mgm2_4.mod
+
+     pf_mgm_11=$bin_external/gms2/mgm_11.mod
+     pf_mgm_4=$bin_external/gms2/mgm_4.mod
+
+     # build models for genetic code 11
+     $bin/build_mgm_models_from_gms2_models_py.sh --pf-bac $pf_mods_bac --pf-arc $pf_mods_arc --pf-output $pf_mgm2_11 --pf-mgm $pf_mgm_11 --components "Start Codons" RBS Promoter "Start Context" -l INFO --pf-learn-from-options $config/learn_from_6.conf
+
+     $bin/build_mgm_models_from_gms2_models_py.sh --pf-bac $pf_mods_bac --pf-arc $pf_mods_arc --pf-output $pf_mgm2_4 --pf-mgm $pf_mgm_4 --components "Start Codons" RBS Promoter "Start Context" -l INFO --pf-learn-from-options $config/learn_from_6.conf
+
+     # These model files need to be placed in the MGM2 binary directory; this download already has them in place, so nothing needs to be done.
+     cd $base
    #+end_src
 ** Extract NCBI Protein Homology Predictions
+   Since part of the analysis uses the protein homology predictions in RefSeq annotation, we separate it out from the annotation files.
    #+begin_src bash
      pf_gil=$lists/sbsp.list
 
      awk -F "," '{if (NR > 1 && NF) print $1}' $pf_gil  | while read -r gcfid; do
        mkdir -p $runs/$gcfid/ncbi_ph;
+       mkdir -p $runs/$gcfid/ncbi;
+  
        awk -F "\t" '{if ($2 == "Protein Homology") print }' $data/$gcfid/ncbi.gff > $runs/$gcfid/ncbi_ph/prediction.gff;
+       cp $data/$gcfid/ncbi.gff $runs/$gcfid/ncbi/prediction.gff
      done
    #+end_src
+
 ** Complete Genomes
+   This section starts with "setup" code to link to directories, parallelization options, and the tools for experimenting. Please read through to identify any parameters that you would like to change (nothing needs to be changed to reproduce the results shown in the paper).
+   #+begin_src bash
+     function init_experiment() {
+       local dn_experiment="$1"
+       cd $tmp
+       mkdir -p $dn_experiment
+       cd $dn_experiment
+     }
+
+     pf_mgm_mod=$bin_external/mgm/MetaGeneMark_v1.mod
+     pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
+     pf_prl_options=$config/parallelization_pbs_2.conf
+
+     declare -a tools=(mgm fgs mga mprodigal mgm2 prodigal gms2);
+     declare -a mgtools=(mgm fgs mga mprodigal mgm2);
+
+     # Setting this to empty removes PBS parallelization.
+     toggle_pbs=""
+     # toggle_pbs="--pf-parallelization-options $pf_prl_options"
+
+     function run_on_complete() {
+       local pf_gil="$1"
+       for t in "${tools[@]}"; do
+         $bin/run_tool_on_genome_list_py.sh --pf-gil $pf_gil --type auto --tool $t --pf-mgm-mod $pf_mgm_mod --pf-mgm2-mod $pf_mgm2_mod ${toggle_pbs}
+       done
+     }
+
+     function collect_stats_complete() {
+       local pf_gil="$1"
+       local pf_stats="$2"
+       local refs="$3"
+       $bin/stats_per_gene_py.sh --pf-gil $pf_gil --tools $refs "${tools[@]}"  --pf-output $pf_stats ${toggle_pbs}   
+     }
+
+   #+end_src
 *** Verified Starts
     #+begin_src bash
-      # run tools on verified starts
-
+      # run tools on verified 
       dn_experiment=complete_verified
-      cd $tmp
-      mkdir -p $dn_experiment
-      cd $dn_experiment
+      init_experiment $dn_experiment
 
       pf_gil=$lists/verified.list
-      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
-      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
-      pf_prl_options=$config/parallelization_pbs_2.conf
-
-      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
-
-      for t in "${tools[@]}"; do
-        $bin/run_tool_on_genome_list_py.sh --pf-gil $pf_gil --type auto --tool $t --pf-mgm-mod $pf_mgm_mod --pf-mgm2-mod $pf_mgm2_mod --pf-parallelization-options $pf_prl_options
-      done
-
+      run_on_complete "$pf_gil"
 
       # collect statistics
       pf_stats=$(pwd)/summary_complete_verified.csv
-      $bin/stats_per_gene_py.sh --pf-gil $pf_gil --tools ncbi_ph ncbi verified "${tools[@]}" --pf-parallelization-options $pf_prl_options --pf-output $pf_stats 
+      collect_stats_complete $pf_gil $pf_stats "verified ncbi ncbi_ph"
 
       # visualize statistics
       mkdir -p figures
       cd figures
+      $bin/viz_stats_small_py.sh --pf-data $pf_stats --ref-3p ncbi --ref-5p verified --tools "${tools[@]}"
 
-      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference verified --tools "${tools[@]}" 
-
+      #back to start
       cd $base
     #+end_src
 *** StartLink+ Starts
     #+begin_src bash
-      # run tools on verified starts
-
+      # run tools on startlink
       dn_experiment=complete_startlink
-      cd $tmp
-      mkdir -p $dn_experiment
-      cd $dn_experiment
+      init_experiment $dn_experiment
 
       pf_gil=$lists/sbsp.list
-      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
-      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
-      pf_prl_options=$config/parallelization_pbs_2.conf
-
-      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
-
-      for t in "${tools[@]}"; do
-        $bin/run_tool_on_genome_list_py.sh --pf-gil $pf_gil --type auto --tool $t --pf-mgm-mod $pf_mgm_mod --pf-mgm2-mod $pf_mgm2_mod --pf-parallelization-options $pf_prl_options
-      done
-
+      run_on_complete "$pf_gil"
 
       # collect statistics
       pf_stats=$(pwd)/summary_complete_startlink.csv
-      $bin/stats_per_gene_py.sh --pf-gil $pf_gil --tools sbsp ncbi ncbi_ph "${tools[@]}" --pf-parallelization-options $pf_prl_options --pf-output $pf_stats 
+      collect_stats_complete $pf_gil $pf_stats "sbsp ncbi ncbi_ph"
 
       # visualize statistics
       mkdir -p figures
       cd figures
+      $bin/viz_stats_large_py.sh --pf-data $pf_stats --ref-3p ncbi --ref-5p sbsp ncbi_ph --tools mgm fgs mga mprodigal mgm2 --pf-checkpoint-3p checkpoint_3p.pkl --pf-checkpoint-5p checkpoint_5p.pkl
 
-      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference sbsp ncbi_ph --tools "${tools[@]}" 
-
+      # back to start
       cd $base
     #+end_src
 ** Genome Fragments
+   #+begin_src bash
+     function run_on_chunks() {
+       local pf_gil="$1"
+       local pf_runs_summary="$2"
+
+       $bin/run_tools_on_chunks_py.sh --pf-gil $pf_gil --tools "${mgtools[@]}" --pf-mgm2-mod $pf_mgm2_mod --pf-mgm-mod $pf_mgm_mod --pd-work $runs --pf-summary $pf_runs_summary ${toggle_pbs}
+
+     }
+   #+end_src
 *** Verified Starts
     #+begin_src bash
       dn_experiment=chunks_verified
-      cd $tmp
-      mkdir -p $dn_experiment
-      cd $dn_experiment
+      init_experiment $dn_experiment
 
       pf_gil=$lists/verified.list
-      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
-      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
-      pf_prl_options=$config/parallelization_pbs_2.conf
 
-      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
-
+      # run on chunks
+      chunk_sizes="250 500 750 1000 1250 1500 1750 2000 2250 2500 2750 3000 5000 10000 15000 20000 30000 40000 50000"
       pf_runs_summary=$(pwd)/runs_summary_chunks_verified.csv
-      for t in "${tools[@]}"; do
-        $bin/run_tools_on_chunks_py.sh --pf-gil $pf_gil --tools "${tools[@]}" --pf-mgm2-mod $pf_mgm2_mod --pf-mgm-mod $pf_mgm_mod --pd-work $runs --pf-summary $pf_runs_summary --pf-parallelization-options $pf_prl_options
-      done
+      $bin/run_tools_on_chunks_py.sh --pf-gil $pf_gil --tools "${tools[@]}" --pf-mgm2-mod $pf_mgm2_mod --pf-mgm-mod $pf_mgm_mod --pd-work $runs --pf-summary $pf_runs_summary  --chunk-sizes-nt $chunk_sizes ${toggle_pbs}
 
 
       # collect statistics
       pf_stats=$(pwd)/summary_chunks_verified.csv
-      $bin/stats_per_gene_on_chunk_py.sh --pf-summary $pf_runs_summary  --reference-tools verified ncbi ncbi_ph  --parallelization-options $pf_prl_options --pf-output $pf_stats 
+      $bin/stats_per_gene_on_chunk_py.sh --pf-summary $pf_runs_summary  --reference-tools verified ncbi  --pf-output $pf_stats ${toggle_pbs} 
 
       # visualize statistics
       mkdir -p figures
       cd figures
 
-      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference verified --tools "${tools[@]}" 
+      $bin/viz_stats_per_gene_on_chunks_py.sh --pf-data $pf_stats --ref-3p ncbi --ref-5p verified --tools "${tools[@]}" 
 
       cd $base
     #+end_src
 *** StartLink Starts
     #+begin_src bash
       dn_experiment=chunks_startlink
-      cd $tmp
-      mkdir -p $dn_experiment
-      cd $dn_experiment
+      init_experiment $dn_experiment
 
       pf_gil=$lists/sbsp.list
-      pf_mgm_mod=$bin_external/gms2/mgm_11.mod
-      pf_mgm2_mod=$bin_external/mgm2/mgm2_11.mod
-      pf_prl_options=$config/parallelization_pbs_2.conf
-
-      declare -a tools=(mgm mgm2 mprodigal fgs mga gms2 prodigal);
 
       pf_runs_summary=$(pwd)/runs_summary_chunks_startlink.csv
-      for t in "${tools[@]}"; do
-        $bin/run_tools_on_chunks_py.sh --pf-gil $pf_gil --tools "${tools[@]}" --pf-mgm2-mod $pf_mgm2_mod --pf-mgm-mod $pf_mgm_mod --pd-work $runs --pf-summary $pf_runs_summary --pf-parallelization-options $pf_prl_options
-      done
+      run_on_chunks $pf_gil $pf_runs_summary 
 
 
       # collect statistics
       pf_stats=$(pwd)/summary_chunks_startlink.csv
-      $bin/stats_per_gene_on_chunk_py.sh --pf-summary $pf_runs_summary  --reference-tools ncbi sbsp sbsp_plus ncbi_ph  --parallelization-options $pf_prl_options --pf-output $pf_stats 
+      #$bin/stats_per_gene_on_chunk_py.sh --pf-summary $pf_runs_summary  --reference-tools sbsp ncbi_ph ncbi  --pf-parallelization-options $pf_prl_options --pf-output $pf_stats
+      $bin/stats_per_gene_on_chunk_py.sh --pf-summary $pf_runs_summary  --reference-tools ncbi sbsp  ncbi_ph  --pf-output $pf_stats --batch-size 40 ${toggle_pbs}
 
       # visualize statistics
       mkdir -p figures
       cd figures
 
-      $bin/viz_stats_per_gene_with_reference_py.sh --pf-data $pf_stats --reference sbsp ncbi_ph --tools "${tools[@]}" 
+       #      $bin/viz_stats_per_gene_on_chunks_py.sh --pf-data $pf_stats --ref-3p ncbi --ref-5p sbsp ncbi_ph --tools "${mgtools[@]}" 
+      $bin/viz_stats_per_gene_on_chunks_large_py.sh --pf-data $pf_stats --ref-5p sbsp ncbi_ph --ref-3p ncbi --tools "${mgtools[@]}"   --pf-checkpoint-5p checkpoint_5p.pkl --pf-checkpoint-3p checkpoint_3p.pkl ${toggle_pbs}
 
       cd $base
     #+end_src
+    
